# nudify2

./: .gitignore  Dockerfile  Dockerfile.test  README.md  dev_server.py  docker-compose.test.yml  docker-compose.yml  fastsam_patch.py  fastsam_patch_v2.py  pyproject.toml  requirements.txt  run_flask.py  setup_directories.sh  simple_frontend_server.py  simple_frontend_server_v2.py  simple_server.py  test_ai_models.py
app/: index.html
app/backend/: app.py  auth.py  depend-resolver.py  models.py
app/backend/models/: __init__.py  ai_models.py  database.py  mock_models.py
app/backend/tests/: test_ai_models.py
app/frontend/: __init__.py  index.html  test.html
app/frontend/css/: styles.css
app/frontend/js/: app.js  auth.js
